# ginjiro-django-project

./: .env_example  .flake8  .gitignore  Docker-compose.yaml  Dockerfile  README.md  apprunner.yaml  pyproject.toml  requirements.txt
.ebextensions/: django.config
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_enhance.md
.github/workflows/: flake8.yml  python_code_style.yml
accounts/: urls.py
apps/: asgi.py  settings.py  urls.py  wsgi.py
apps/accounts/: form.py  urls.py  views.py
apps/accounts/management/commands/: createsu.py
apps/gohanbot/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/gohanbot/migrations/: 0001_initial.py  0002_foodshop_created_by.py  0003_alter_foodshop_created_by_alter_foodshop_description_and_more.py  0004_alter_foodkind_table_alter_foodshop_table.py  0005_auto_20220408_2314.py  0006_auto_20220408_2352.py
commands/: createsu.py
config/: asgi.py  settings.py  urls.py  wsgi.py
fixture/: food_kind.json
gohanbot/: admin.py  apps.py  models.py  urls.py  views.py
gohanbot/migrations/: 0002_foodshop_created_by.py
snippets/: models.py  tests.py  urls.py  views.py
snippets/migrations/: 0001_initial.py
static/snippets/css/: style.css
templates/: base.html
templates/accounts/: base.html  login.html  signup.html
templates/gohanbot/: base.html  lottery.html  shop_register.html  top.html
templates/snippets/: base.html  snippet_detail.html  snippet_edit.html  snippet_new.html  top.html
